--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -14,8 +14,12 @@
     "serverless-offline": "^14.4.0"
   },
   "dependencies": {
+    "@middy/core": "^6.4.5",
+    "@middy/http-json-body-parser": "^6.4.5",
     "aws-lambda": "^1.0.7",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "tsyringe": "^4.10.0",
     "typescript": "^5.9.3"
   }
 }
