--- a/kbay/server/user-service/serverless.yml
+++ b/kbay/server/user-service/serverless.yml
@@ -4,6 +4,11 @@ service: user-service
 provider:
   name: aws
   runtime: nodejs20.x
+  versionFunctions: false
+  stage: "dev"
+  region: us-east-1
+  httpApi:
+    cors: true
 
 functions:
   signup:
