--- a/kbay/server/user-service/tsconfig.json
+++ b/kbay/server/user-service/tsconfig.json
@@ -4,11 +4,15 @@
     "target": "ES2020",
     "moduleResolution": "node",
     "verbatimModuleSyntax": true,
-
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
   },
-  "include": ["app/**/*"]
+  "include": [
+    "app/**/*"
+  ]
 }
