--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@middy/core": "^6.4.5",
     "@middy/http-json-body-parser": "^6.4.5",
+    "@types/bcrypt": "^6.0.0",
     "aws-lambda": "^1.0.7",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "reflect-metadata": "^0.2.2",
