--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
+    "@types/pg": "^8.16.0",
     "serverless-offline": "^14.4.0"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.10.0",
