--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "@middy/core": "^6.4.5",
     "@middy/http-json-body-parser": "^6.4.5",
-    "@types/bcrypt": "^6.0.0",
     "aws-lambda": "^1.0.7",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "pg": "^8.16.3",
