--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@middy/core": "^6.4.5",
     "@middy/http-json-body-parser": "^6.4.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "aws-lambda": "^1.0.7",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
