[dev] twilio integration (env-based, no secrets)

--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -28,6 +28,7 @@
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.10.0",
+    "twilio": "^5.11.2",
     "typescript": "^5.9.3"
   }
 }
