[Fix] twilio sms

--- a/kbay/server/user-service/serverless.yml
+++ b/kbay/server/user-service/serverless.yml
@@ -9,7 +9,10 @@ provider:
   region: us-east-1
   httpApi:
     cors: true
-
+  environment:
+    TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
+    TWILIO_AUTH_TOKEN: ${env:TWILIO_AUTH_TOKEN}
+    TWILIO_PHONE_NUMBER: ${env:TWILIO_PHONE_NUMBER}
 functions:
   signup:
     handler: app/handler.signup
