--- a/kbay/server/user-service/package.json
+++ b/kbay/server/user-service/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "db-migrate-pg": "^1.5.2",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
