[Dev] address table migration

--- a/kbay/server/user-service/Makefile
+++ b/kbay/server/user-service/Makefile
@@ -6,4 +6,6 @@ migrate:
 	db-migrate up
 migrate_down:
 	db-migrate down
-.PHONY: start_db stop_db migrate migrate_down
+create_tables:
+	db-migrate create $(n) --sql-file
+.PHONY: start_db stop_db migrate migrate_down create_tables
