--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.236.0",
-    "constructs": "^10.0.0"
+    "class": "^0.1.4",
+    "constructs": "^10.0.0",
+    "transformer": "^1.2.8",
+    "validator": "^13.15.26"
   }
 }
