--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "dev":"cdk synth && sam local start-api -t cdk.out/ProServiceStack.template.json"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.160",
