--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "dev":"cdk synth && sam local start-api -t cdk.out/ProServiceStack.template.json"
+    "dev": "cdk synth && sam local start-api -t cdk.out/ProServiceStack.template.json"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.160",
@@ -24,7 +24,10 @@
   "dependencies": {
     "aws-cdk-lib": "^2.236.0",
     "class": "^0.1.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "constructs": "^10.0.0",
+    "mongoose": "^9.2.1",
     "transformer": "^1.2.8",
     "validator": "^13.15.26"
   }
