--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -27,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "constructs": "^10.0.0",
+    "dotenv": "^17.3.1",
     "mongoose": "^9.2.1",
     "transformer": "^1.2.8",
     "validator": "^13.15.26"
