--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -22,7 +22,9 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "aws-cdk-lib": "^2.236.0",
+    "aws-sdk": "^2.1693.0",
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -30,6 +32,7 @@
     "dotenv": "^17.3.1",
     "mongoose": "^9.2.1",
     "transformer": "^1.2.8",
+    "uuid": "^13.0.0",
     "validator": "^13.15.26"
   }
 }
