--- a/kbay/server/pro_service/package.json
+++ b/kbay/server/pro_service/package.json
@@ -22,6 +22,8 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@middy/core": "^7.1.1",
+    "@middy/http-json-body-parser": "^7.1.1",
     "@types/uuid": "^10.0.0",
     "aws-cdk-lib": "^2.236.0",
     "aws-sdk": "^2.1693.0",
